--- a/styles/global.css
+++ b/styles/global.css
@@ -176,6 +176,7 @@ header {
   width: 100%;
   height: 80px;
   position: fixed;
+  z-index: 105;
   top: 0;
   padding: 0 15px;
   background-color: white;
@@ -391,7 +392,7 @@ header .header-container .language-box .geo-box {
 }
 header .header-container .language-box #eng-box {
   position: absolute;
-  z-index: 105;
+  z-index: 115;
   top: 55px;
   cursor: pointer;
   justify-content: center;
@@ -432,7 +433,7 @@ header #drop-down-container {
   top: 80px;
   left: 0;
   right: 0;
-  z-index: 102;
+  z-index: 110;
   animation: fade 0.5s ease-in-out;
 }
 @media only screen and (max-width: 1024px) {
@@ -748,7 +749,7 @@ header #menu-container .last-box .right-side a {
 
 .button-menu-section .button-menu {
   position: fixed;
-  z-index: 95;
+  z-index: 105;
   right: 15px;
   bottom: 15px;
   display: flex;
@@ -851,6 +852,8 @@ header #menu-container .last-box .right-side a {
   overflow-y: scroll;
   animation: fade 0.5s ease-in-out;
   flex: 1;
+  position: relative;
+  z-index: 101;
 }
 #main-footer-container::-webkit-scrollbar {
   width: 0;
@@ -930,7 +933,6 @@ header #menu-container .last-box .right-side a {
   height: 360px;
   position: relative;
   overflow: hidden;
-  z-index: -99;
   border-radius: 4px;
 }
 @media (min-width: 479px) {
@@ -1168,7 +1170,6 @@ header #menu-container .last-box .right-side a {
   min-width: 280px;
   height: 232px;
   position: relative;
-  z-index: -99;
   overflow: hidden;
   border-radius: 8px;
 }
@@ -1335,6 +1336,7 @@ header #menu-container .last-box .right-side a {
 }
 #main-footer-container main .section-digital-bank .section-digital-bank-container {
   width: inherit;
+  position: relative;
   padding: 32px 15px;
   background-color: white;
 }
@@ -1544,6 +1546,7 @@ header #menu-container .last-box .right-side a {
   justify-content: auto;
   align-items: center;
   position: relative;
+  z-index: 105;
 }
 #main-footer-container footer .footer-container .footer-top .language-box:hover .geo-box {
   background-color: gainsboro;
@@ -1567,7 +1570,6 @@ header #menu-container .last-box .right-side a {
 }
 #main-footer-container footer .footer-container .footer-top .language-box #eng-box {
   position: absolute;
-  z-index: 105;
   top: 45px;
   cursor: pointer;
   justify-content: center;
